--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
       </div>
 
-      <button class="btn btn-info btn-block">Start！</button>
+      <button class="btn btn-danger btn-block">Start！</button>
     </div>
   </body>
 </html>
